k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 587542452178.dkr.ecr.us-east-1.amazonaws.com/backend-eks:latest
          ports:
            - containerPort: 3000
